--- a/package.json
+++ b/package.json
@@ -28,6 +28,12 @@
   },
   "homepage": "https://github.com/gaearon/react-hot-boilerplate",
   "devDependencies": {
+  },
+  "dependencies": {
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6",
+    "superagent": "^1.8.3",
+    "underscore": "^1.8.3",
     "babel-core": "^6.0.20",
     "babel-eslint": "^4.1.3",
     "babel-loader": "^6.0.1",
@@ -39,14 +45,5 @@
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
-  },
-  "dependencies": {
-    "ajax": "0.0.4",
-    "ajax-request": "^1.2.1",
-    "fetch": "^1.0.1",
-    "react": "^0.14.6",
-    "react-dom": "^0.14.6",
-    "superagent": "^1.8.3",
-    "underscore": "^1.8.3"
   }
 }
