--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "eslint-plugin-react": "^3.6.2",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1"
+    "webpack-dev-server": "^1.12.1",
+    "webpack-dev-middleware": "^1.6.1",
+    "express": "^4.12.2"
   }
 }
