--- a/package.json
+++ b/package.json
@@ -27,13 +27,8 @@
     "url": "https://github.com/gaearon/react-hot-boilerplate/issues"
   },
   "homepage": "https://github.com/gaearon/react-hot-boilerplate",
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "dependencies": {
-    "react": "^0.14.6",
-    "react-dom": "^0.14.6",
-    "superagent": "^1.8.3",
-    "underscore": "^1.8.3",
     "babel-core": "^6.0.20",
     "babel-eslint": "^4.1.3",
     "babel-loader": "^6.0.1",
@@ -42,10 +37,15 @@
     "babel-preset-stage-0": "^6.0.15",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.6.2",
+    "express": "^4.12.2",
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6",
     "react-hot-loader": "^1.3.0",
+    "superagent": "^1.8.3",
+    "underscore": "^1.8.3",
+    "urijs": "^1.18.0",
     "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1",
     "webpack-dev-middleware": "^1.6.1",
-    "express": "^4.12.2"
+    "webpack-dev-server": "^1.12.1"
   }
 }
